--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-test-renderer": "^16.8.5",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
+    "redux-lazy": "^0.6.1",
     "redux-logger": "3.0.6",
     "redux-thunk": "^2.3.0",
     "simple-line-icons": "^2.4.1"
