Corrigindo cadastro de produtos, verificação da existencia do codigo de barras; Ajuste para salvar o formulário de pesquisa de produtos

--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "react-router-config": "^4.4.0-beta.8",
     "react-router-dom": "~4.3.1",
     "react-scripts": "2.1.8",
+    "react-spinkit": "^3.0.0",
     "react-test-renderer": "^16.8.5",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.0",
+    "redux-form": "^8.2.3",
     "redux-form-input-masks": "^2.0.1",
     "redux-lazy": "^0.6.1",
     "redux-logger": "3.0.6",
